// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSection /> should render 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
        id="subscription-amount-tooltip-target-1"
      >
        <span
          class="discountedAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <button
          class="upgradeButton btn btn-outline-warning"
          type="button"
        >
          <span
            class="mr-2 upgradeLabel"
          >
            Subscribe
          </span>
          <img
            alt="upgrade-icon"
            class="upgradeIcon"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for customers already with full add-on features 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        You have access to
         
        <b>
          <a
            to="/app/settings/self-service"
          >
            self-service
          </a>
        </b>
        , activate:
      </p>
      <div>
        <ul>
          <li>
            Self-service in 
            <b>
              chat
            </b>
             and in
             
            <b>
              help center
            </b>
          </li>
          <li>
            <b>
              Track
            </b>
            , 
            <b>
              Return
            </b>
             &
             
            <b>
              Cancel
            </b>
             order flows
          </li>
          <li>
            <b>
              Customized
            </b>
             report issue workflows
          </li>
        </ul>
      </div>
      <p>
        Track the performance in a
         
        <b>
           
          <a
            to="/app/stats/self-service"
          >
            dedicated report
          </a>
        </b>
        !
      </p>
    </div>
    <button
      class="align-self-end btn btn-secondary"
      type="button"
    >
      Manage Add-On
    </button>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for customers already with legacy add-on features 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
        id="subscription-amount-tooltip-target-2"
      >
        <span
          class="discountedAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <button
          class="upgradeButton btn btn-outline-warning"
          type="button"
        >
          <span
            class="mr-2 upgradeLabel"
          >
            Subscribe
          </span>
          <img
            alt="upgrade-icon"
            class="upgradeIcon"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for trialing customers 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
        id="subscription-amount-tooltip-target-3"
      >
        <span
          class="discountedAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <a
          to="[object Object]"
        >
          <button
            class="upgradeButton btn btn-outline-warning"
            type="button"
          >
            <span
              class="mr-2 upgradeLabel"
            >
              Subscribe
            </span>
            <img
              alt="upgrade-icon"
              class="upgradeIcon"
              src="test-file-stub"
            />
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
